--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <link rel="stylesheet" href="makeup.css">
 </head>
 <body>
-<h2>TEST</h2>
-<h1>tESRrRsevwee</h1>
-<button id=result></button>
+<h1>Welcome!</h1>
+<h1>Yeah I don't really plan on anything for this website, I just made it because I was bored...</h1>
+<button id=result>Some button</button>
 <script src="organs.js"></script>
 </body>
 </html>
